# swift-wind

./: Cargo.toml  LICENSE  README.md  dev.sh  watch.sh
client-desktop/: Cargo.toml
client-desktop/src/: main.rs
swift-wind/: Cargo.toml
swift-wind/src/: components.rs  hook.rs  lib.rs  main.rs  page.rs
swift-wind/src/components/: additional_authorization.rs  form.rs  message.rs  room_selection_button.rs  space_selection_button.rs  vertical_sidebar.rs
swift-wind/src/hook/: connect.rs  login.rs  register.rs  submit_additional_auth.rs
swift-wind/src/page/: connect.rs  login.rs  main_interface.rs  register.rs  settings.rs
swift-wind/src/pages/: login.rs  mod.rs
