
[workspace]
resolver = "2"
members = ["swift-wind", "swift-wind-plugin-matrix"]

[workspace.dependencies]
freya = "0.3.0-rc.4"
freya-testing = "0.3.0-rc.4"
dioxus = { version = "0.6.3", features = [
    "macro",
    "hooks",
], default-features = false }
dioxus-router = { version = "0.6.3", default-features = false }
matrix-sdk = { version = "0.10.0", features = ["e2e-encryption", "markdown"] }
ruma = { version = "0.12.1", features = ["client-api-c", "client-api"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
simple_logger = "5.0.0"
log = "0.4.27"
chrono = "0.4.40"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
test-log = { version = "0.2.17", features = ["trace"] }
surrealdb = { version = "2.2.1", features = ["kv-surrealkv", "kv-mem"] }
futures = "0.3.31"
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.97" }
# wasmer = "5.0.4"
url = "2.5.4"
rand = "0.9.1"
bevy = "0.16.0"
crossbeam-channel = "0.5.15"
async-channel = "2.3.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
