[package]
name = "swift-wind"
version = "0.1.0"
edition = "2024"
description = "ambitious matrix client"
homepage = "https://github.com/hey-adora/swift-wind"
license = "GPL-3.0-or-later"

[dependencies]
dioxus-router = { workspace = true }
freya = { workspace = true }
dioxus = { workspace = true }
matrix-sdk = { workspace = true }
ruma = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
