[package]
name = "swift-wind"
version = "0.1.0"
edition = "2024"
description = "ambitious matrix client"
homepage = "https://github.com/hey-adora/swift-wind"
license = "GPL-3.0-or-later"

[dependencies]
dioxus-router = { workspace = true }
freya = { workspace = true }
dioxus = { workspace = true }
matrix-sdk = { workspace = true }
ruma = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# wasmer = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
async-channel = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
freya-testing = { workspace = true }
